include/operators.h

ORTKI_API(ortki::OrtKITensorSeq *) ortki_RNN(ortki::OrtKITensor * X, ortki::OrtKITensor * W, ortki::OrtKITensor * R, ortki::OrtKITensor * B, ortki::OrtKITensor * sequence_lens, ortki::OrtKITensor * initial_h, float* activation_alpha, int activation_alpha_size, float* activation_beta, int activation_beta_size, const char** activations, int activations_size, float clip, const char* direction, long hidden_size, long layout);
ORTKI_API(ortki::OrtKITensor *) ortki_RandomNormal(long dtype, float mean, float scale, float seed, long* shape, int shape_size);
ORTKI_API(ortki::OrtKITensor *) ortki_RandomNormalLike(ortki::OrtKITensor * input, long dtype, float mean, float scale, float seed);
ORTKI_API(ortki::OrtKITensor *) ortki_RandomUniform(long dtype, float high, float low, float seed, long* shape, int shape_size);
ORTKI_API(ortki::OrtKITensor *) ortki_RandomUniformLike(ortki::OrtKITensor * input, long dtype, float high, float low, float seed);
ORTKI_API(ortki::OrtKITensor *) ortki_Range(ortki::OrtKITensor * start, ortki::OrtKITensor * limit, ortki::OrtKITensor * delta);
ORTKI_API(ortki::OrtKITensor *) ortki_Reciprocal(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceL1(ortki::OrtKITensor * data, long* axes, int axes_size, long keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceL2(ortki::OrtKITensor * data, long* axes, int axes_size, long keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceLogSum(ortki::OrtKITensor * data, long* axes, int axes_size, long keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceLogSumExp(ortki::OrtKITensor * data, long* axes, int axes_size, long keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceMax(ortki::OrtKITensor * data, long* axes, int axes_size, long keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceMean(ortki::OrtKITensor * data, long* axes, int axes_size, long keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceMin(ortki::OrtKITensor * data, long* axes, int axes_size, long keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceProd(ortki::OrtKITensor * data, long* axes, int axes_size, long keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceSum(ortki::OrtKITensor * data, ortki::OrtKITensor * axes, long keepdims, long noop_with_empty_axes);
ORTKI_API(ortki::OrtKITensor *) ortki_ReduceSumSquare(ortki::OrtKITensor * data, long* axes, int axes_size, long keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_Relu(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Reshape(ortki::OrtKITensor * data, ortki::OrtKITensor * shape, long allowzero);
ORTKI_API(ortki::OrtKITensor *) ortki_ReverseSequence(ortki::OrtKITensor * input, ortki::OrtKITensor * sequence_lens, long batch_axis, long time_axis);
ORTKI_API(ortki::OrtKITensor *) ortki_RoiAlign(ortki::OrtKITensor * X, ortki::OrtKITensor * rois, ortki::OrtKITensor * batch_indices, const char* mode, long output_height, long output_width, long sampling_ratio, float spatial_scale);
ORTKI_API(ortki::OrtKITensor *) ortki_Round(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Scatter(ortki::OrtKITensor * data, ortki::OrtKITensor * indices, ortki::OrtKITensor * updates, long axis);
ORTKI_API(ortki::OrtKITensor *) ortki_ScatterElements(ortki::OrtKITensor * data, ortki::OrtKITensor * indices, ortki::OrtKITensor * updates, long axis);
ORTKI_API(ortki::OrtKITensor *) ortki_ScatterND(ortki::OrtKITensor * data, ortki::OrtKITensor * indices, ortki::OrtKITensor * updates);
ORTKI_API(ortki::OrtKITensor *) ortki_Selu(ortki::OrtKITensor * X, float alpha, float gamma);
ORTKI_API(ortki::OrtKITensor *) ortki_SequenceAt(ortki::OrtKITensor ** input_sequence, int input_size, ortki::OrtKITensor * position);
ORTKI_API(ortki::OrtKITensor *) ortki_SequenceConstruct(ortki::OrtKITensor ** inputs, int input_size);
ORTKI_API(ortki::OrtKITensor *) ortki_SequenceEmpty(long dtype);
ORTKI_API(ortki::OrtKITensor *) ortki_SequenceErase(ortki::OrtKITensor ** input_sequence, int input_size, ortki::OrtKITensor * position);
ORTKI_API(ortki::OrtKITensor *) ortki_SequenceInsert(ortki::OrtKITensor ** input_sequence, int input_size, ortki::OrtKITensor * tensor, ortki::OrtKITensor * position);
ORTKI_API(ortki::OrtKITensor *) ortki_SequenceLength(ortki::OrtKITensor ** input_sequence, int input_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Shape(ortki::OrtKITensor * data);
ORTKI_API(ortki::OrtKITensor *) ortki_Shrink(ortki::OrtKITensor * input, float bias, float lambd);
ORTKI_API(ortki::OrtKITensor *) ortki_Sigmoid(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Sign(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Sin(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Sinh(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Size(ortki::OrtKITensor * data);
ORTKI_API(ortki::OrtKITensor *) ortki_Slice(ortki::OrtKITensor * data, ortki::OrtKITensor * starts, ortki::OrtKITensor * ends, ortki::OrtKITensor * axes, ortki::OrtKITensor * steps);
ORTKI_API(ortki::OrtKITensor *) ortki_Softmax(ortki::OrtKITensor * input, long axis);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_SoftmaxCrossEntropyLoss(ortki::OrtKITensor * scores, ortki::OrtKITensor * labels, ortki::OrtKITensor * weights, long ignore_index, const char* reduction);
ORTKI_API(ortki::OrtKITensor *) ortki_Softplus(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Softsign(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_SpaceToDepth(ortki::OrtKITensor * input, long blocksize);
ORTKI_API(ortki::OrtKITensor *) ortki_SplitToSequence(ortki::OrtKITensor * input, ortki::OrtKITensor * split, long axis, long keepdims);
ORTKI_API(ortki::OrtKITensor *) ortki_Sqrt(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Squeeze(ortki::OrtKITensor * data, ortki::OrtKITensor * axes);
ORTKI_API(ortki::OrtKITensor *) ortki_StringNormalizer(ortki::OrtKITensor * X, const char* case_change_action, long is_case_sensitive, const char* locale, const char** stopwords, int stopwords_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Sub(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_Sum(ortki::OrtKITensor ** data_0, int input_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Tan(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Tanh(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_TfIdfVectorizer(ortki::OrtKITensor * X, long max_gram_length, long max_skip_count, long min_gram_length, const char* mode, long* ngram_counts, int ngram_counts_size, long* ngram_indexes, int ngram_indexes_size, long* pool_int64s, int pool_int64s_size, const char** pool_strings, int pool_strings_size, float* weights, int weights_size);
ORTKI_API(ortki::OrtKITensor *) ortki_ThresholdedRelu(ortki::OrtKITensor * X, float alpha);
ORTKI_API(ortki::OrtKITensor *) ortki_Tile(ortki::OrtKITensor * input, ortki::OrtKITensor * repeats);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_TopK(ortki::OrtKITensor * X, ortki::OrtKITensor * K, long axis, long largest, long sorted);
ORTKI_API(ortki::OrtKITensor *) ortki_Transpose(ortki::OrtKITensor * data, long* perm, int perm_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Trilu(ortki::OrtKITensor * input, ortki::OrtKITensor * k, long upper);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_Unique(ortki::OrtKITensor * X, long axis, long sorted);
ORTKI_API(ortki::OrtKITensor *) ortki_Unsqueeze(ortki::OrtKITensor * data, ortki::OrtKITensor * axes);
ORTKI_API(ortki::OrtKITensor *) ortki_Upsample(ortki::OrtKITensor * X, ortki::OrtKITensor * scales, const char* mode);
ORTKI_API(ortki::OrtKITensor *) ortki_Where(ortki::OrtKITensor * condition, ortki::OrtKITensor * X, ortki::OrtKITensor * Y);
ORTKI_API(ortki::OrtKITensor *) ortki_Xor(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_ArrayFeatureExtractor(ortki::OrtKITensor * X, ortki::OrtKITensor * Y);
ORTKI_API(ortki::OrtKITensor *) ortki_Binarizer(ortki::OrtKITensor * X, float threshold);
ORTKI_API(ortki::OrtKITensor *) ortki_CastMap(ortki::OrtKITensor * X, const char* cast_to, const char* map_form, long max_map);
ORTKI_API(ortki::OrtKITensor *) ortki_CategoryMapper(ortki::OrtKITensor * X, long* cats_int64s, int cats_int64s_size, const char** cats_strings, int cats_strings_size, long default_int64, const char* default_string);
ORTKI_API(ortki::OrtKITensor *) ortki_DictVectorizer(ortki::OrtKITensor * X, long* int64_vocabulary, int int64_vocabulary_size, const char** string_vocabulary, int string_vocabulary_size);
ORTKI_API(ortki::OrtKITensor *) ortki_FeatureVectorizer(ortki::OrtKITensor ** X, int input_size, long* inputdimensions, int inputdimensions_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Imputer(ortki::OrtKITensor * X, float* imputed_value_floats, int imputed_value_floats_size, long* imputed_value_int64s, int imputed_value_int64s_size, float replaced_value_float, long replaced_value_int64);
ORTKI_API(ortki::OrtKITensor *) ortki_LabelEncoder(ortki::OrtKITensor * X, float default_float, long default_int64, const char* default_string, float* keys_floats, int keys_floats_size, long* keys_int64s, int keys_int64s_size, const char** keys_strings, int keys_strings_size, float* values_floats, int values_floats_size, long* values_int64s, int values_int64s_size, const char** values_strings, int values_strings_size);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_LinearClassifier(ortki::OrtKITensor * X, long* classlabels_ints, int classlabels_ints_size, const char** classlabels_strings, int classlabels_strings_size, float* coefficients, int coefficients_size, float* intercepts, int intercepts_size, long multi_class, const char* post_transform);
ORTKI_API(ortki::OrtKITensor *) ortki_LinearRegressor(ortki::OrtKITensor * X, float* coefficients, int coefficients_size, float* intercepts, int intercepts_size, const char* post_transform, long targets);
ORTKI_API(ortki::OrtKITensor *) ortki_Normalizer(ortki::OrtKITensor * X, const char* norm);
ORTKI_API(ortki::OrtKITensor *) ortki_OneHotEncoder(ortki::OrtKITensor * X, long* cats_int64s, int cats_int64s_size, const char** cats_strings, int cats_strings_size, long zeros);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_SVMClassifier(ortki::OrtKITensor * X, long* classlabels_ints, int classlabels_ints_size, const char** classlabels_strings, int classlabels_strings_size, float* coefficients, int coefficients_size, float* kernel_params, int kernel_params_size, const char* kernel_type, const char* post_transform, float* prob_a, int prob_a_size, float* prob_b, int prob_b_size, float* rho, int rho_size, float* support_vectors, int support_vectors_size, long* vectors_per_class, int vectors_per_class_size);
ORTKI_API(ortki::OrtKITensor *) ortki_SVMRegressor(ortki::OrtKITensor * X, float* coefficients, int coefficients_size, float* kernel_params, int kernel_params_size, const char* kernel_type, long n_supports, long one_class, const char* post_transform, float* rho, int rho_size, float* support_vectors, int support_vectors_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Scaler(ortki::OrtKITensor * X, float* offset, int offset_size, float* scale, int scale_size);