CSharp/OrtKI/Operators.cs

[DllImport("libortki.so")]
private static extern IntPtr ortki_RNN(IntPtr X, IntPtr W, IntPtr R, IntPtr B, IntPtr sequence_lens, IntPtr initial_h, float[] activation_alpha, int activation_alpha_size, float[] activation_beta, int activation_beta_size, String[] activations, int activations_size, float clip, String direction, long hidden_size, long layout);
[DllImport("libortki.so")]
private static extern IntPtr ortki_RandomNormal(long dtype, float mean, float scale, float seed, long[] shape, int shape_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_RandomNormalLike(IntPtr input, long dtype, float mean, float scale, float seed);
[DllImport("libortki.so")]
private static extern IntPtr ortki_RandomUniform(long dtype, float high, float low, float seed, long[] shape, int shape_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_RandomUniformLike(IntPtr input, long dtype, float high, float low, float seed);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Range(IntPtr start, IntPtr limit, IntPtr delta);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Reciprocal(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ReduceL1(IntPtr data, long[] axes, int axes_size, long keepdims);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ReduceL2(IntPtr data, long[] axes, int axes_size, long keepdims);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ReduceLogSum(IntPtr data, long[] axes, int axes_size, long keepdims);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ReduceLogSumExp(IntPtr data, long[] axes, int axes_size, long keepdims);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ReduceMax(IntPtr data, long[] axes, int axes_size, long keepdims);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ReduceMean(IntPtr data, long[] axes, int axes_size, long keepdims);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ReduceMin(IntPtr data, long[] axes, int axes_size, long keepdims);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ReduceProd(IntPtr data, long[] axes, int axes_size, long keepdims);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ReduceSum(IntPtr data, IntPtr axes, long keepdims, long noop_with_empty_axes);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ReduceSumSquare(IntPtr data, long[] axes, int axes_size, long keepdims);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Relu(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Reshape(IntPtr data, IntPtr shape, long allowzero);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ReverseSequence(IntPtr input, IntPtr sequence_lens, long batch_axis, long time_axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_RoiAlign(IntPtr X, IntPtr rois, IntPtr batch_indices, String mode, long output_height, long output_width, long sampling_ratio, float spatial_scale);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Round(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Scatter(IntPtr data, IntPtr indices, IntPtr updates, long axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ScatterElements(IntPtr data, IntPtr indices, IntPtr updates, long axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ScatterND(IntPtr data, IntPtr indices, IntPtr updates);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Selu(IntPtr X, float alpha, float gamma);
[DllImport("libortki.so")]
private static extern IntPtr ortki_SequenceAt(IntPtr[] input_sequence, int input_size, IntPtr position);
[DllImport("libortki.so")]
private static extern IntPtr ortki_SequenceConstruct(IntPtr[] inputs, int input_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_SequenceEmpty(long dtype);
[DllImport("libortki.so")]
private static extern IntPtr ortki_SequenceErase(IntPtr[] input_sequence, int input_size, IntPtr position);
[DllImport("libortki.so")]
private static extern IntPtr ortki_SequenceInsert(IntPtr[] input_sequence, int input_size, IntPtr tensor, IntPtr position);
[DllImport("libortki.so")]
private static extern IntPtr ortki_SequenceLength(IntPtr[] input_sequence, int input_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Shape(IntPtr data);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Shrink(IntPtr input, float bias, float lambd);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Sigmoid(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Sign(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Sin(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Sinh(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Size(IntPtr data);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Slice(IntPtr data, IntPtr starts, IntPtr ends, IntPtr axes, IntPtr steps);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Softmax(IntPtr input, long axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_SoftmaxCrossEntropyLoss(IntPtr scores, IntPtr labels, IntPtr weights, long ignore_index, String reduction);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Softplus(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Softsign(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_SpaceToDepth(IntPtr input, long blocksize);
[DllImport("libortki.so")]
private static extern IntPtr ortki_SplitToSequence(IntPtr input, IntPtr split, long axis, long keepdims);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Sqrt(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Squeeze(IntPtr data, IntPtr axes);
[DllImport("libortki.so")]
private static extern IntPtr ortki_StringNormalizer(IntPtr X, String case_change_action, long is_case_sensitive, String locale, String[] stopwords, int stopwords_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Sub(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Sum(IntPtr[] data_0, int input_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Tan(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Tanh(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_TfIdfVectorizer(IntPtr X, long max_gram_length, long max_skip_count, long min_gram_length, String mode, long[] ngram_counts, int ngram_counts_size, long[] ngram_indexes, int ngram_indexes_size, long[] pool_int64s, int pool_int64s_size, String[] pool_strings, int pool_strings_size, float[] weights, int weights_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ThresholdedRelu(IntPtr X, float alpha);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Tile(IntPtr input, IntPtr repeats);
[DllImport("libortki.so")]
private static extern IntPtr ortki_TopK(IntPtr X, IntPtr K, long axis, long largest, long sorted);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Transpose(IntPtr data, long[] perm, int perm_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Trilu(IntPtr input, IntPtr k, long upper);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Unique(IntPtr X, long axis, long sorted);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Unsqueeze(IntPtr data, IntPtr axes);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Upsample(IntPtr X, IntPtr scales, String mode);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Where(IntPtr condition, IntPtr X, IntPtr Y);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Xor(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ArrayFeatureExtractor(IntPtr X, IntPtr Y);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Binarizer(IntPtr X, float threshold);
[DllImport("libortki.so")]
private static extern IntPtr ortki_CastMap(IntPtr X, String cast_to, String map_form, long max_map);
[DllImport("libortki.so")]
private static extern IntPtr ortki_CategoryMapper(IntPtr X, long[] cats_int64s, int cats_int64s_size, String[] cats_strings, int cats_strings_size, long default_int64, String default_string);
[DllImport("libortki.so")]
private static extern IntPtr ortki_DictVectorizer(IntPtr X, long[] int64_vocabulary, int int64_vocabulary_size, String[] string_vocabulary, int string_vocabulary_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_FeatureVectorizer(IntPtr[] X, int input_size, long[] inputdimensions, int inputdimensions_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Imputer(IntPtr X, float[] imputed_value_floats, int imputed_value_floats_size, long[] imputed_value_int64s, int imputed_value_int64s_size, float replaced_value_float, long replaced_value_int64);
[DllImport("libortki.so")]
private static extern IntPtr ortki_LabelEncoder(IntPtr X, float default_float, long default_int64, String default_string, float[] keys_floats, int keys_floats_size, long[] keys_int64s, int keys_int64s_size, String[] keys_strings, int keys_strings_size, float[] values_floats, int values_floats_size, long[] values_int64s, int values_int64s_size, String[] values_strings, int values_strings_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_LinearClassifier(IntPtr X, long[] classlabels_ints, int classlabels_ints_size, String[] classlabels_strings, int classlabels_strings_size, float[] coefficients, int coefficients_size, float[] intercepts, int intercepts_size, long multi_class, String post_transform);
[DllImport("libortki.so")]
private static extern IntPtr ortki_LinearRegressor(IntPtr X, float[] coefficients, int coefficients_size, float[] intercepts, int intercepts_size, String post_transform, long targets);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Normalizer(IntPtr X, String norm);
[DllImport("libortki.so")]
private static extern IntPtr ortki_OneHotEncoder(IntPtr X, long[] cats_int64s, int cats_int64s_size, String[] cats_strings, int cats_strings_size, long zeros);
[DllImport("libortki.so")]
private static extern IntPtr ortki_SVMClassifier(IntPtr X, long[] classlabels_ints, int classlabels_ints_size, String[] classlabels_strings, int classlabels_strings_size, float[] coefficients, int coefficients_size, float[] kernel_params, int kernel_params_size, String kernel_type, String post_transform, float[] prob_a, int prob_a_size, float[] prob_b, int prob_b_size, float[] rho, int rho_size, float[] support_vectors, int support_vectors_size, long[] vectors_per_class, int vectors_per_class_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_SVMRegressor(IntPtr X, float[] coefficients, int coefficients_size, float[] kernel_params, int kernel_params_size, String kernel_type, long n_supports, long one_class, String post_transform, float[] rho, int rho_size, float[] support_vectors, int support_vectors_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Scaler(IntPtr X, float[] offset, int offset_size, float[] scale, int scale_size);
